sandbox/output
OneHundredDoors.java:1: error: '.' expected
import static Door;
                  ^
OneHundredDoors.java:1: error: ';' expected
import static Door;
                   ^
OneHundredDoors.java:2: error: class, interface, or enum expected
import java.util.List;
       ^
3 errors
